--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,5 +1,9 @@
 ---
 - name: Configure the Oracle APT key
+  apt_key: url=https://www.virtualbox.org/download/oracle_vbox_2016.asc
+           state=present
+
+- name: Configure the Oracle APT key
   apt_key: url=https://www.virtualbox.org/download/oracle_vbox.asc
            state=present
 
