--- a/meta/main.yml
+++ b/meta/main.yml
@@ -6,9 +6,9 @@ galaxy_info:
   license: Apache
   min_ansible_version: 1.2
   platforms:
-  - name: Ubuntu
-    versions:
-    - trusty
-  categories:
-  - system
+    - name: Ubuntu
+      versions:
+        - trusty
+  galaxy_tags:
+    - system
 dependencies: []
